correct formatting of /about on mobile

--- a/src/components/backgrounds/mountains/MountainBackground.module.scss
+++ b/src/components/backgrounds/mountains/MountainBackground.module.scss
@@ -5,6 +5,6 @@
 }
 
 .banner {
-  height: 125vh;
+  height: 150vh;
   background: #bbe8f6;
 }
